<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/city"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/temp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/cloudiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/clouds" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humid"
                        android:layout_marginBottom="10dp"
                        android:textSize="16sp"
                        android:textAlignment="textStart" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/wind" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/help"/>

        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="58dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:id="@+id/rescue_ser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:background="@drawable/ripple_effects"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="68dp"
                                android:layout_height="68dp"
                                android:contentDescription="Rescue"
                                app:srcCompat="@drawable/rescue" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/rescue"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/shelter_ser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effects"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="68dp"
                                android:layout_height="68dp"
                                android:contentDescription="Shelter"
                                app:srcCompat="@drawable/shelter" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/shelter"
                                android:textSize="16sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:id="@+id/hospital_ser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:background="@drawable/ripple_effects"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="68dp"
                                android:layout_height="68dp"
                                android:contentDescription="Hospital"
                                app:srcCompat="@drawable/hospital" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/hospital"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/emergency_helpline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effects"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="68dp"
                                android:layout_height="68dp"
                                android:contentDescription="Emergency"
                                app:srcCompat="@drawable/helpline" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/emergency"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/food_supply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ripple_effects"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="Emergency"
                        app:srcCompat="@drawable/food_supply" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:text="@string/food_sup"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>