<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/main_imageIV"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/descrVI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/description"
                    android:maxLines="3" />

                <requestFocus />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationVI"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:hint="@string/location"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/timestampVI"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/timestamp"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Spinner
            android:id="@+id/spinnerVI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="4dp"
            android:foregroundGravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/send_dataVI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send"
                    android:textColor="#000"
                    android:textSize="28sp" />

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/send" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</FrameLayout>